RESOLVED FIXED75729
DFG no longer optimises CanvasPixelArray
https://bugs.webkit.org/show_bug.cgi?id=75729
Summary DFG no longer optimises CanvasPixelArray
Oliver Hunt
Reported 2012-01-06 12:30:27 PST
DFG no longer optimises CanvasPixelArray
Attachments
Patch (3.74 KB, patch)
2012-01-06 12:33 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2012-01-06 12:33:37 PST
Oliver Hunt
Comment 2 2012-01-06 12:39:04 PST
Note You need to log in before you can comment on or make changes to this bug.